Closed
Bug 359124
Opened 18 years ago
Closed 18 years ago
Can't print in cairo-cocoa builds
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: pavlov, Assigned: pavlov)
References
(Depends on 1 open bug)
Details
(Whiteboard: [blocking1.9a1+])
Attachments
(1 file, 2 obsolete files)
18.56 KB,
patch
|
vlad
:
review+
|
Details | Diff | Splinter Review |
printing doesn't work in cairo-cocoa builds...
Assignee | ||
Updated•18 years ago
|
Assignee: nobody → pavlov
Flags: blocking1.9+
Assignee | ||
Comment 1•18 years ago
|
||
this mostly works.. we don't do print options right and i'm not happy with the way we spool things but it will get us something for the alpha
Whiteboard: [blocking1.9a1+]
Needed patch to avoid a crash. Ideally we'd only do this if we're printing...
Attachment #245144 -
Flags: review?
Attachment #245144 -
Flags: review? → review?(pavlov)
Assignee | ||
Updated•18 years ago
|
Attachment #245144 -
Flags: review?(pavlov) → review+
Assignee | ||
Comment 3•18 years ago
|
||
this gets printing mostly working. i'll file bugs on the remaining issues.
Attachment #245047 -
Attachment is obsolete: true
Attachment #245144 -
Attachment is obsolete: true
Attachment #246831 -
Flags: review?(vladimir)
Attachment #246831 -
Flags: review?(vladimir) → review+
Assignee | ||
Updated•18 years ago
|
Status: NEW → RESOLVED
Closed: 18 years ago
Resolution: --- → FIXED
Comment 4•18 years ago
|
||
update: marcia says printing on mac doesn't work, and gives her an error every time.
Comment 5•18 years ago
|
||
Using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1) Gecko/20061204 GranParadiso/3.0a1, I get the following error on both the PPC and Intel Mac: "Printer Error: An unknown error occurred while printing."
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Assignee | ||
Comment 6•18 years ago
|
||
please file a new bug.. printing is working for a lot of people (ignoring bug 362136)
Status: REOPENED → RESOLVED
Closed: 18 years ago → 18 years ago
Resolution: --- → FIXED
Comment 7•18 years ago
|
||
It turns out this was failing only when you printed from the GP candidate build to one printer in the office here. When I tried another printer in the office it worked. The odd thing is that Bon Echo builds printed fine to that same printer, so I thought it might be a problem with the build. Odd.
(In reply to comment #5)
> Using Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a1)
> Gecko/20061204 GranParadiso/3.0a1, I get the following error on both the PPC
> and Intel Mac: "Printer Error: An unknown error occurred while printing."
>
Comment 8•18 years ago
|
||
marcia, did you ever file a new bug?
I'm seeing a similar problem at home, when I try to print from my mac trunk build to my deskjet 5400.
I'll do a little debugging to see what's going on.
Comment 9•18 years ago
|
||
it turns out that I can print from my trunk on my deskjet 5400, but just not a specific paypal page. see bug #365752
Comment 11•18 years ago
|
||
with,
Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en-US; rv:1.9a2pre) Gecko/20070131 Minefield/3.0a2pre
on osx 10.4.8, i'm unable to print any/all pages.
actuallu, i _can_ print -- it just prints completely blank. tried with various printers, as well as print to pdf & preview. all blank.
at least 4 me, this is still an issue.
either REOPEN or NEW bug?
thanks.
Comment 12•18 years ago
|
||
oops sorry about that ...
Depends on: 375572
You need to log in
before you can comment on or make changes to this bug.
Description
•