cocoa-cairo printing. bug 359124. r=vlad