gfx/cairo/cairo/src/cairo-nquartz-surface.c
@@ -547,6 +547,29 @@ SurfacePatternDrawFunc (void *info, CGContextRef context)
     cairo_surface_destroy ((cairo_surface_t*) quartz_surf);
 }
 
+/* Borrowed from cairo-meta-surface */
+static cairo_status_t
+_init_pattern_with_snapshot (cairo_pattern_t *pattern,
+			     const cairo_pattern_t *other)
+{
+    _cairo_pattern_init_copy (pattern, other);
+
+    if (pattern->type == CAIRO_PATTERN_TYPE_SURFACE) {
+	cairo_surface_pattern_t *surface_pattern =
+	    (cairo_surface_pattern_t *) pattern;
+	cairo_surface_t *surface = surface_pattern->surface;
+
+	surface_pattern->surface = _cairo_surface_snapshot (surface);
+
+	cairo_surface_destroy (surface);
+
+	if (surface_pattern->surface->status)
+	    return surface_pattern->surface->status;
+    }
+
+    return CAIRO_STATUS_SUCCESS;
+}
+
 static CGPatternRef
 _cairo_nquartz_cairo_repeating_surface_pattern_to_quartz (cairo_nquartz_surface_t *dest,
 							  cairo_pattern_t *abspat)
@@ -562,6 +585,9 @@ _cairo_nquartz_cairo_repeating_surface_pattern_to_quartz (cairo_nquartz_surface_
 			      (CGFunctionReleaseInfoCallback) cairo_pattern_destroy };
     CGPatternRef cgpat;
     float rw, rh;
+
+    cairo_pattern_union_t *snap_pattern = NULL;
+    cairo_pattern_t *target_pattern = abspat;
 
     /* SURFACE is the only type we'll handle here */
     if (abspat->type != CAIRO_PATTERN_TYPE_SURFACE)
@@ -627,8 +653,18 @@ _cairo_nquartz_cairo_repeating_surface_pattern_to_quartz (cairo_nquartz_surface_
     rh = extents.height;
 #endif
 
-    cairo_pattern_reference (abspat);
-    cgpat = CGPatternCreate (abspat,
+    /* XXX fixme: only do snapshots if the context is for printing, or get rid of the
+       other block if it doesn't fafect performance */
+    if (1 /* context is for printing */) {
+	snap_pattern = (cairo_pattern_union_t*) malloc(sizeof(cairo_pattern_union_t));
+	target_pattern = (cairo_pattern_t*) snap_pattern;
+	_init_pattern_with_snapshot (snap_pattern, abspat);
+    } else {
+	cairo_pattern_reference (abspat);
+	target_pattern = abspat;
+    }
+
+    cgpat = CGPatternCreate (target_pattern,
 			     pbounds,
 			     ptransform,
 			     rw, rh,
